# PlanManageQt

./: CMakeLists.txt  database.cpp  database.h  datedelegate.cpp  datedelegate.h  habitfrequencydelegate.cpp  habitfrequencydelegate.h  habitstatusdelegate.cpp  habitstatusdelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plannamedelegate.cpp  plannamedelegate.h  planstatusdelegate.cpp  planstatusdelegate.h  resource.rc  resources.qrc  taskstatusdelegate.cpp  taskstatusdelegate.h  utils.cpp  utils.h
resource/: MacOS.qss
